--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@xinghunm/widgets": "0.0.3",
+    "apollo-boost": "^0.1.16",
+    "apollo-test-utils": "^0.3.2",
     "connected-react-router": "^4.3.0",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
+    "graphql-tools": "^4.0.1",
     "history": "^4.7.2",
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-apollo": "^2.2.4",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
