--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@xinghunm/widgets": "0.0.3",
     "apollo-boost": "^0.1.16",
     "apollo-test-utils": "^0.3.2",
+    "body-parser": "^1.18.3",
     "connected-react-router": "^4.3.0",
+    "express": "^4.16.4",
     "graphql": "^14.0.2",
+    "graphql-server-express": "^1.4.0",
     "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.1",
     "history": "^4.7.2",
@@ -23,6 +26,7 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "autoprefixer": "7.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.5",
@@ -35,41 +39,42 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "6.26.0",
-    "autoprefixer": "7.1.6",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "css-loader": "0.28.7",
+    "dotenv": "4.0.0",
+    "dotenv-expand": "4.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
-    "eslint-plugin-react": "^7.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
-    "dotenv": "4.0.0",
-    "dotenv-expand": "4.2.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-react": "^7.10.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "nodemon": "^1.18.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
-    "css-loader": "0.28.7",
-    "url-loader": "0.6.2",
+    "raf": "^3.4.0",
     "style-loader": "0.19.0",
-    "file-loader": "1.1.5",
     "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "extract-text-webpack-plugin": "3.0.2",
-    "html-webpack-plugin": "2.29.0",
-    "whatwg-fetch": "2.0.3",
-    "jest": "20.0.4",
-    "raf": "^3.4.0"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "PORT=1989 node scripts/start.js",
     "build": "node scripts/build.js",
+    "mockexam1": "NODE_ENV=development nodemon --exec 'babel-node' src/examples/example1/server/index.js",
     "test": "jest test --colors",
     "coverage": "jest --colors --coverage"
   }
