--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@xinghunm/widgets": "0.0.3",
     "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.3.5",
+    "apollo-link": "^1.2.3",
+    "apollo-link-http": "^1.5.5",
     "apollo-test-utils": "^0.3.2",
     "body-parser": "^1.18.3",
     "connected-react-router": "^4.3.0",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-server-express": "^1.4.0",
