--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^3.3.3"
   },
   "devDependencies": {
+    "@xinghunm/eslint-config": "0.0.2",
     "autoprefixer": "7.1.6",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
