--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-boost": "^0.1.16",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
     "apollo-link-http": "^1.5.5",
     "apollo-test-utils": "^0.3.2",
     "body-parser": "^1.18.3",
