enable example2 can delete card with muation

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "start": "PORT=1989 node scripts/start.js",
     "build": "node scripts/build.js",
     "mockexam1": "NODE_ENV=development nodemon --exec 'babel-node' src/examples/example1/server/index.js",
+    "mockexam2": "NODE_ENV=development nodemon --exec 'babel-node' src/examples/example2/server/index.js",
     "test": "jest test --colors",
     "coverage": "jest --colors --coverage"
   }
