create apollo client with apollo-link-state

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-context": "^1.0.9",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-state": "^0.4.2",
     "apollo-test-utils": "^0.3.2",
     "body-parser": "^1.18.3",
     "connected-react-router": "^4.3.0",
@@ -19,6 +20,7 @@
     "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.11",
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
