--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,10 @@
   "parser": "babel-eslint",
   "extends": [
     "@xinghunm/eslint-config"
-  ]
+  ],
+  "rules": {
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off"
+  }
 }
