--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-link": "^1.2.3",
     "apollo-link-context": "^1.0.9",
+    "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-state": "^0.4.2",
     "apollo-test-utils": "^0.3.2",
