--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
     "apollo-link-state": "^0.4.2",
+    "apollo-link-ws": "^1.0.9",
     "apollo-test-utils": "^0.3.2",
     "body-parser": "^1.18.3",
     "connected-react-router": "^4.3.0",
@@ -31,7 +32,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.4.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "devDependencies": {
     "@xinghunm/eslint-config": "0.0.2",
