--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "@xinghunm/eslint-config"
   ],
   "rules": {
+    "no-restricted-syntax": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off"
