--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "graphql-server-express": "^1.4.0",
+    "graphql-subscriptions": "^1.0.0",
     "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.1",
     "history": "^4.7.2",
