--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connected-react-router": "^4.3.0",
     "cors": "^2.8.4",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "graphql": "^14.0.2",
     "graphql-server-express": "^1.4.0",
     "graphql-subscriptions": "^1.0.0",
